--- a/index.html
+++ b/index.html
@@ -20,6 +20,30 @@
             </nav>
         </div>
     </header>
+    <main>
+        <div class="filme-principal">
+            <div class="container">
+                <h3 class="titulo">FLASH</h3>
+                <p class="descricao">Barry enfrenta diversos assassinos que invadem a premiação onde ele acompanha Iris,
+                    mas os efeitos colaterais de seus novos superpoderes representam uma ameaça.</p>
+
+                <div class="botoes">
+                    <button role="button" class="botao">
+                        <i class="fas fa-play"></i>
+                        ASSISTIR AGORA
+                    </button>
+                    <button role="button" class="botao">
+                        <i class="fas fa-info-circle"></i>
+                        MAIS INFORMAÇÕES
+                    </button>
+                </div>
+
+            </div>
+
+
+        </div>
+    </main>
+    <script src="https://kit.fontawesome.com/381e42601d.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
