Adicionado Tela Login

--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
     <!--owl css-->
     <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
     <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <!--owl css-->
+
+        <!--animacao-->
+        <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css"
+      />
+        <!--animacao-->
+
 
 
     <title>NETFLIX CLONE</title>
@@ -37,6 +46,7 @@
                 <h3 class="titulo">FLASH</h3>
                 <p class="descricao">Barry enfrenta diversos assassinos que invadem a premiação onde ele acompanha Iris,
                     mas os efeitos colaterais de seus novos superpoderes representam uma ameaça.</p>
+                    <h4 class="animate__bounceInDown">TESTE</h4>
 
                 <div class="botoes">
                     <button role="button" class="botao">
@@ -97,6 +107,7 @@
     <script src="js/owl/owl.carousel.min.js"></script>
     <script src="js/owl/main.js"></script>
     <!--owl script-->
+
 
 
 </body>
